--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -60,6 +60,7 @@ add_test_target(TARGET mini-qiskit_test SOURCES "source/mini-qiskit_test.cpp")
 add_test_target(TARGET gate_test SOURCES "source/gate_test.cpp")
 add_test_target(TARGET state_test SOURCES "source/state_test.cpp")
 add_test_target(TARGET operations_test SOURCES "source/operations_test.cpp")
+add_test_target(TARGET gate_pair_generator_test SOURCES "source/gate_pair_generator_test.cpp")
 
 # ---- End-of-file commands ----
 
