Add function to add toffoli gates

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -67,6 +67,7 @@ add_test_target(TARGET matrix2x2_test SOURCES "source/common/matrix2x2_test.cpp"
 add_test_target(TARGET probabilities_test SOURCES "source/calculations/probabilities_test.cpp")
 add_test_target(TARGET measurements_test SOURCES "source/calculations/measurements_test.cpp")
 add_test_target(TARGET fourier_test SOURCES "source/gates/fourier_test.cpp")
+add_test_target(TARGET toffoli_test SOURCES "source/gates/toffoli_test.cpp")
 
 # ---- End-of-file commands ----
 
