Add control swap gate

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -69,6 +69,7 @@ add_test_target(TARGET measurements_test SOURCES "source/calculations/measuremen
 add_test_target(TARGET fourier_test SOURCES "source/gates/fourier_test.cpp")
 add_test_target(TARGET toffoli_test SOURCES "source/gates/toffoli_test.cpp")
 add_test_target(TARGET multiplicity_controlled_u_gate_test SOURCES "source/gates/multiplicity_controlled_u_gate_test.cpp")
+add_test_target(TARGET control_swap_test SOURCES "source/gates/control_swap_test.cpp")
 
 # ---- End-of-file commands ----
 
