--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -23,9 +23,10 @@ endfunction()
 add_example(deutsch)
 add_example(deutsch_jozsa)
 add_example(deutsch_jozsa_balanced_ibm_example)
+add_example(grover_two_qubit)
 add_example(inverse_fourier)
-add_example(simon_ibm_example)
 add_example(quantum_phase_estimation_t_gate)
 add_example(shor)
+add_example(simon_ibm_example)
 
 add_folders(Example)
