Replace common u-gate constants with functions

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -71,6 +71,7 @@ add_test_target(TARGET toffoli_test SOURCES "source/gates/toffoli_test.cpp")
 add_test_target(TARGET multiplicity_controlled_u_gate_test SOURCES "source/gates/multiplicity_controlled_u_gate_test.cpp")
 add_test_target(TARGET control_swap_test SOURCES "source/gates/control_swap_test.cpp")
 add_test_target(TARGET append_circuits_test SOURCES "source/common/append_circuits_test.cpp")
+add_test_target(TARGET make_controlled_circuit_test SOURCES "source/circuit_operations/make_controlled_circuit_test.cpp")
 
 # ---- End-of-file commands ----
 
