Create function to read decomposed gate information from a file

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -28,5 +28,6 @@ add_example(inverse_fourier)
 add_example(quantum_phase_estimation_t_gate)
 add_example(shor)
 add_example(simon_ibm_example)
+add_example(read_decomposition_file)
 
 add_folders(Example)
