--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -30,5 +30,6 @@ add_example(shor)
 add_example(simon_ibm_example)
 add_example(read_decomposition_file)
 add_example(quantum_phase_estimation_diagonal)
+add_example(quantum_phase_estimation_diagonal_binary)
 
 add_folders(Example)
