Add attempt at running the circuit from the rotor paper

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -31,5 +31,6 @@ add_example(simon_ibm_example)
 add_example(read_decomposition_file)
 add_example(quantum_phase_estimation_diagonal)
 add_example(quantum_phase_estimation_diagonal_binary)
+add_example(quantum_phase_estimation_trotter20)
 
 add_folders(Example)
