--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -75,6 +75,7 @@ add_test_target(TARGET make_controlled_circuit_test SOURCES "source/circuit_oper
 add_test_target(TARGET make_binary_controlled_circuit_test SOURCES "source/circuit_operations/make_binary_controlled_circuit_test.cpp" "source/test_utils/powers_of_diagonal_unitary.cpp")
 add_test_target(TARGET build_decomposed_circuit_test SOURCES "source/circuit_operations/build_decomposed_circuit_test.cpp")
 add_test_target(TARGET multi_product_test SOURCES "source/multi_product_test.cpp" "source/test_utils/powers_of_diagonal_unitary.cpp")
+add_test_target(TARGET read_tangelo_file_test SOURCES "source/decomposed/read_tangelo_file_test.cpp")
 
 # ---- End-of-file commands ----
 
