Add example of saving a statevector

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -27,6 +27,7 @@ add_example(grover_two_qubit)
 add_example(inverse_fourier)
 add_example(quantum_phase_estimation_t_gate)
 add_example(shor)
+add_example(save_statevector_example)
 add_example(simon_ibm_example)
 add_example(read_decomposition_file)
 add_example(quantum_phase_estimation_diagonal)
