Write source files to simulate the circuit and measure the states

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -34,5 +34,7 @@ add_example(quantum_phase_estimation_diagonal)
 add_example(quantum_phase_estimation_diagonal_binary)
 add_example(quantum_phase_estimation_trotter20)
 add_example(multithreaded_simulate)
+add_example(shaeer_qpe_measure)
+add_example(shaeer_qpe_simulate)
 
 add_folders(Example)
