Move the qpe files to a different directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,15 @@ if(PROJECT_IS_TOP_LEVEL)
   endif()
 endif()
 
+# ---- QPE Tangelo Project ----
+
+if(PROJECT_IS_TOP_LEVEL)
+  option(BUILD_QPE_TANGELO_PROJECT "Build QPE tangelo project tree." "${mini-qiskit_DEVELOPER_MODE}")
+  if(BUILD_QPE_TANGELO_PROJECT)
+    add_subdirectory(qpe_tangelo_project)
+  endif()
+endif()
+
 # ---- Developer mode ----
 
 if(NOT mini-qiskit_DEVELOPER_MODE)
