Separate examples into two subdirectories

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -11,8 +11,8 @@ endif()
 
 add_custom_target(run-examples)
 
-function(add_example NAME)
-  add_executable("${NAME}" "${NAME}.cpp")
+function(add_example SUBDIR NAME)
+  add_executable("${NAME}" "${SUBDIR}/${NAME}.cpp")
   target_link_libraries("${NAME}" PRIVATE mini-qiskit::mini-qiskit)
   target_compile_features("${NAME}" PRIVATE cxx_std_20)
   add_custom_target("run_${NAME}" COMMAND "${NAME}" VERBATIM)
@@ -20,21 +20,22 @@ function(add_example NAME)
   add_dependencies(run-examples "run_${NAME}")
 endfunction()
 
-add_example(deutsch)
-add_example(deutsch_jozsa)
-add_example(deutsch_jozsa_balanced_ibm_example)
-add_example(grover_two_qubit)
-add_example(inverse_fourier)
-add_example(quantum_phase_estimation_t_gate)
-add_example(shor)
-add_example(save_statevector_example)
-add_example(simon_ibm_example)
-add_example(read_decomposition_file)
-add_example(quantum_teleportation)
-add_example(quantum_phase_estimation_diagonal)
-add_example(quantum_phase_estimation_diagonal_binary)
-add_example(quantum_phase_estimation_trotter20)
-add_example(multithreaded_simulate)
-add_example(random_state)
+add_example("algorithms" deutsch_jozsa_balanced_ibm_example)
+add_example("algorithms" deutsch_jozsa)
+add_example("algorithms" deutsch)
+add_example("algorithms" grover_two_qubit)
+add_example("algorithms" quantum_phase_estimation_t_gate)
+add_example("algorithms" quantum_teleportation)
+add_example("algorithms" shor)
+add_example("algorithms" simon_ibm_example)
+
+add_example("general" inverse_fourier)
+add_example("general" save_statevector_example)
+add_example("general" read_decomposition_file)
+add_example("general" quantum_phase_estimation_diagonal)
+add_example("general" quantum_phase_estimation_diagonal_binary)
+add_example("general" quantum_phase_estimation_trotter20)
+add_example("general" multithreaded_simulate)
+add_example("general" random_state)
 
 add_folders(Example)
