--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -56,35 +56,42 @@ function(add_test_target)
     catch_discover_tests(${add_test_target_TARGET})
 endfunction()
 
-add_test_target(TARGET circuit_test SOURCES "source/circuit_test.cpp")
-add_test_target(TARGET gate_test SOURCES "source/gate_test.cpp")
-add_test_target(TARGET state_test SOURCES "source/state/state_test.cpp")
-add_test_target(TARGET bitstring_utils_test SOURCES "source/state/bitstring_utils_test.cpp")
-add_test_target(TARGET operations_test SOURCES "source/operations_test.cpp")
-add_test_target(TARGET gate_pair_generator_test SOURCES "source/gate_pair_generator_test.cpp")
-add_test_target(TARGET simulate_test SOURCES "source/simulate_test.cpp")
+add_test_target(TARGET probabilities_test SOURCES "source/calculations/probabilities_test.cpp")
+
+add_test_target(TARGET circuit_test SOURCES "source/circuit/circuit_test.cpp")
+
+add_test_target(TARGET append_circuits_test SOURCES "source/circuit_operations/append_circuits_test.cpp")
+add_test_target(TARGET make_binary_controlled_circuit_test SOURCES "source/circuit_operations/make_binary_controlled_circuit_test.cpp" "source/test_utils/powers_of_diagonal_unitary.cpp")
+add_test_target(TARGET make_controlled_circuit_test SOURCES "source/circuit_operations/make_controlled_circuit_test.cpp")
+add_test_target(TARGET transpile_to_primitive_test SOURCES "source/circuit_operations/transpile_to_primitive_test.cpp" "source/test_utils/powers_of_diagonal_unitary.cpp")
+
 add_test_target(TARGET mathtools_test SOURCES "source/common/mathtools_test.cpp")
 add_test_target(TARGET linear_bijective_map_test SOURCES "source/common/linear_bijective_map_test.cpp")
 add_test_target(TARGET matrix2x2_test SOURCES "source/common/matrix2x2_test.cpp")
-add_test_target(TARGET append_circuits_test SOURCES "source/common/append_circuits_test.cpp")
 add_test_target(TARGET arange_test SOURCES "source/common/arange_test.cpp")
-add_test_target(TARGET probabilities_test SOURCES "source/calculations/probabilities_test.cpp")
+
+add_test_target(TARGET control_swap_test SOURCES "source/gates/control_swap_test.cpp")
 add_test_target(TARGET fourier_test SOURCES "source/gates/fourier_test.cpp")
-add_test_target(TARGET toffoli_test SOURCES "source/gates/toffoli_test.cpp")
-add_test_target(TARGET random_u_gates_test SOURCES "source/gates/random_u_gates_test.cpp")
+add_test_target(TARGET gate_test SOURCES "source/gates/gate_test.cpp")
 add_test_target(TARGET matrix2x2_gate_decomposition_test SOURCES "source/gates/matrix2x2_gate_decomposition_test.cpp")
 add_test_target(TARGET multiplicity_controlled_u_gate_test SOURCES "source/gates/multiplicity_controlled_u_gate_test.cpp")
-add_test_target(TARGET control_swap_test SOURCES "source/gates/control_swap_test.cpp")
-add_test_target(TARGET make_controlled_circuit_test SOURCES "source/circuit_operations/make_controlled_circuit_test.cpp")
-add_test_target(TARGET make_binary_controlled_circuit_test SOURCES "source/circuit_operations/make_binary_controlled_circuit_test.cpp" "source/test_utils/powers_of_diagonal_unitary.cpp")
-add_test_target(TARGET transpile_to_primitive_test SOURCES "source/circuit_operations/transpile_to_primitive_test.cpp" "source/test_utils/powers_of_diagonal_unitary.cpp")
-add_test_target(TARGET read_tangelo_file_test SOURCES "source/io/read_tangelo_file_test.cpp")
-add_test_target(TARGET write_tangelo_file_test SOURCES "source/io/write_tangelo_file_test.cpp")
+add_test_target(TARGET random_u_gates_test SOURCES "source/gates/random_u_gates_test.cpp")
+add_test_target(TARGET toffoli_test SOURCES "source/gates/toffoli_test.cpp")
+
 add_test_target(TARGET io_numpy_statevector_test SOURCES "source/io/numpy_statevector_test.cpp")
 add_test_target(TARGET io_statevector_test SOURCES "source/io/statevector_test.cpp")
-add_test_target(TARGET multithread_simulate_utils_test SOURCES "source/simulation/multithread_simulate_utils_test.cpp")
-add_test_target(TARGET measure_test SOURCES "source/simulation/measure_test.cpp")
+add_test_target(TARGET read_tangelo_file_test SOURCES "source/io/read_tangelo_file_test.cpp")
+add_test_target(TARGET write_tangelo_file_test SOURCES "source/io/write_tangelo_file_test.cpp")
+
 add_test_target(TARGET control_flow_test SOURCES "source/simulation/control_flow_test.cpp")
+add_test_target(TARGET gate_pair_generator_test SOURCES "source/simulation/gate_pair_generator_test.cpp")
+add_test_target(TARGET measure_test SOURCES "source/simulation/measure_test.cpp")
+add_test_target(TARGET multithread_simulate_utils_test SOURCES "source/simulation/multithread_simulate_utils_test.cpp")
+add_test_target(TARGET operations_test SOURCES "source/simulation/operations_test.cpp")
+add_test_target(TARGET simulate_test SOURCES "source/simulation/simulate_test.cpp")
+
+add_test_target(TARGET state_test SOURCES "source/state/state_test.cpp")
+add_test_target(TARGET bitstring_utils_test SOURCES "source/state/bitstring_utils_test.cpp")
 
 # ---- End-of-file commands ----
 
