Begin code for writing out the predicate

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -79,6 +79,7 @@ add_test_target(TARGET multiplicity_controlled_u_gate_test SOURCES "source/gates
 add_test_target(TARGET random_u_gates_test SOURCES "source/gates/random_u_gates_test.cpp")
 add_test_target(TARGET toffoli_test SOURCES "source/gates/toffoli_test.cpp")
 
+add_test_target(TARGET io_control_flow_test SOURCES "source/io/numpy_statevector_test.cpp")
 add_test_target(TARGET io_numpy_statevector_test SOURCES "source/io/numpy_statevector_test.cpp")
 add_test_target(TARGET io_statevector_test SOURCES "source/io/statevector_test.cpp")
 add_test_target(TARGET read_tangelo_file_test SOURCES "source/io/read_tangelo_file_test.cpp")
