--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -92,8 +92,9 @@ add_test_target(TARGET multithread_simulate_utils_test SOURCES "source/simulatio
 add_test_target(TARGET operations_test SOURCES "source/simulation/operations_test.cpp")
 add_test_target(TARGET simulate_test SOURCES "source/simulation/simulate_test.cpp")
 
-add_test_target(TARGET state_test SOURCES "source/state/state_test.cpp")
 add_test_target(TARGET bitstring_utils_test SOURCES "source/state/bitstring_utils_test.cpp")
+add_test_target(TARGET project_state_test SOURCES "source/state/project_state_test.cpp")
+add_test_target(TARGET state_test SOURCES "source/state/state_test.cpp")
 
 # ---- End-of-file commands ----
 
