Move clone_ptr into internals

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,10 +17,10 @@ include(cmake/variables.cmake)
 
 add_library(
     kettle_kettle
-    source/kettle/calculations/probabilities.cpp
-    source/kettle/calculations/measurements.cpp
-    source/kettle/circuit/circuit.cpp
-    source/kettle/circuit/control_flow_predicate.cpp
+    source/kettle_internal/calculations/probabilities.cpp
+    source/kettle_internal/calculations/measurements.cpp
+    source/kettle_internal/circuit/circuit.cpp
+    source/kettle_internal/circuit/control_flow_predicate.cpp
 )
 add_library(kettle::kettle ALIAS kettle_kettle)
 
@@ -51,14 +51,9 @@ target_include_directories(
     ${warning_guard}
     PUBLIC
     "\$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
+    PUBLIC
+    "\$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/source>"
 )
-
-# target_include_directories(
-#     kettle_kettle
-#     ${warning_guard}
-#     PUBLIC
-#     "\$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/source>"
-# )
 
 target_include_directories(
     kettle_kettle SYSTEM
