--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_library(
     source/kettle_internal/circuit/circuit.cpp
     source/kettle_internal/circuit/control_flow_predicate.cpp
     source/kettle_internal/common/mathtools.cpp
+    source/kettle_internal/common/matrix2x2.cpp
 )
 add_library(kettle::kettle ALIAS kettle_kettle)
 
