--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,9 @@ add_library(
     source/kettle_internal/common/prng.cpp
     source/kettle_internal/common/state_test_utils.cpp
     source/kettle_internal/common/utils_internal.cpp
+    source/kettle_internal/gates/primitive_gate/gate_compare.cpp
+    source/kettle_internal/gates/primitive_gate/gate_create.cpp
+    source/kettle_internal/gates/primitive_gate/gate_id.cpp
 )
 add_library(kettle::kettle ALIAS kettle_kettle)
 
