Split io-related header files between header and source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,11 @@ add_library(
     source/kettle_internal/gates/random_u_gates.cpp
     source/kettle_internal/gates/swap.cpp
     source/kettle_internal/gates/toffoli.cpp
+    source/kettle_internal/io/io_control_flow.cpp
+    source/kettle_internal/io/numpy_statevector.cpp
+    source/kettle_internal/io/read_tangelo_file.cpp
+    source/kettle_internal/io/statevector.cpp
+    source/kettle_internal/io/write_tangelo_file.cpp
 )
 add_library(kettle::kettle ALIAS kettle_kettle)
 
