Add Parameter and ParameterExpression types with basic operations available

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -85,6 +85,9 @@ add_test_target(TARGET io_statevector_test SOURCES "source/io/statevector_test.c
 add_test_target(TARGET read_tangelo_file_test SOURCES "source/io/read_tangelo_file_test.cpp")
 add_test_target(TARGET write_tangelo_file_test SOURCES "source/io/write_tangelo_file_test.cpp")
 
+add_test_target(TARGET parameter_test SOURCES "source/parameter/parameter_test.cpp")
+add_test_target(TARGET parameter_expression_test SOURCES "source/parameter/parameter_expression_test.cpp")
+
 add_test_target(TARGET control_flow_test SOURCES "source/simulation/control_flow_test.cpp")
 add_test_target(TARGET gate_pair_generator_test SOURCES "source/simulation/gate_pair_generator_test.cpp")
 add_test_target(TARGET measure_test SOURCES "source/simulation/measure_test.cpp")
