Split qpe analysis code into one for measurements/inner product and one for reversing the statevector

--- a/qpe_tangelo_project/CMakeLists.txt
+++ b/qpe_tangelo_project/CMakeLists.txt
@@ -18,6 +18,7 @@ function(add_exec NAME)
 endfunction()
 
 add_exec(qpe_tangelo_measure)
+add_exec(qpe_tangelo_reverse_and_project)
 add_exec(qpe_tangelo_simulate)
 add_exec(qpe_tangelo_simulate_minimal)
 
