Get nlocal to compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ add_library(
     source/kettle_internal/common/state_test_utils.cpp
     source/kettle_internal/common/utils_internal.cpp
     source/kettle_internal/gates/common_u_gates.cpp
+    source/kettle_internal/gates/compound_gate/gate_id.cpp
     source/kettle_internal/gates/fourier.cpp
     source/kettle_internal/gates/primitive_gate/gate_compare.cpp
     source/kettle_internal/gates/primitive_gate/gate_create.cpp
@@ -53,6 +54,7 @@ add_library(
     source/kettle_internal/io/write_tangelo_file.cpp
     source/kettle_internal/operator/pauli/pauli_operator.cpp
     source/kettle_internal/operator/pauli/sparse_pauli_string.cpp
+    source/kettle_internal/optimize/n_local.cpp
     source/kettle_internal/parameter/parameter.cpp
     source/kettle_internal/parameter/parameter_expression.cpp
     source/kettle_internal/simulation/measure.cpp
