Get basic n_local unit test working

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -101,6 +101,7 @@ add_test_target(TARGET sparse_pauli_string_test SOURCES "source/operator/pauli/s
 add_test_target(TARGET pauli_operator_test SOURCES "source/operator/pauli/pauli_operator_test.cpp")
 
 add_test_target(OPTIONS USE_NLOPT TARGET optimize_test SOURCES "source/optimize/optimize_test.cpp")
+add_test_target(OPTIONS TARGET n_local_test SOURCES "source/optimize/n_local_test.cpp")
 
 add_test_target(TARGET parameter_test SOURCES "source/parameter/parameter_test.cpp")
 add_test_target(TARGET parameter_expression_test SOURCES "source/parameter/parameter_expression_test.cpp")
