Get VQE to compile for dipolar planar rotor example

--- a/qpe_tangelo_project/CMakeLists.txt
+++ b/qpe_tangelo_project/CMakeLists.txt
@@ -10,11 +10,24 @@ if(PROJECT_IS_TOP_LEVEL)
 endif()
 
 function(add_exec NAME)
-  add_executable("${NAME}" "${NAME}.cpp")
-  target_link_libraries("${NAME}" PRIVATE kettle::kettle)
-  target_compile_features("${NAME}" PRIVATE cxx_std_20)
-  add_custom_target("run_${NAME}" COMMAND "${NAME}" VERBATIM)
-  add_dependencies("run_${NAME}" "${NAME}")
+    add_executable("${NAME}" "${NAME}.cpp")
+    target_link_libraries("${NAME}" PRIVATE kettle::kettle)
+    target_compile_features("${NAME}" PRIVATE cxx_std_20)
+    add_custom_target("run_${NAME}" COMMAND "${NAME}" VERBATIM)
+    add_dependencies("run_${NAME}" "${NAME}")
+endfunction()
+
+function(add_exec_with_nlopt NAME)
+    add_executable("${NAME}" "${NAME}.cpp")
+    target_link_libraries("${NAME}" PRIVATE kettle::kettle PRIVATE nlopt::nlopt)
+    target_compile_features("${NAME}" PRIVATE cxx_std_20)
+
+    get_target_property(NLOPT_INCLUDES nlopt::nlopt INTERFACE_INCLUDE_DIRECTORIES)
+    target_link_libraries("${NAME}" PRIVATE nlopt::nlopt)
+    target_include_directories("${NAME}" SYSTEM PUBLIC ${NLOPT_INCLUDES})
+
+    add_custom_target("run_${NAME}" COMMAND "${NAME}" VERBATIM)
+    add_dependencies("run_${NAME}" "${NAME}")
 endfunction()
 
 add_exec(qpe_tangelo_eigenvalue)
@@ -23,5 +36,6 @@ add_exec(qpe_tangelo_project)
 add_exec(qpe_tangelo_simulate)
 add_exec(qpe_tangelo_simulate_minimal)
 add_exec(qpe_tangelo_simulate_reverse)
+add_exec_with_nlopt(vqe_dipolar_linear_rotors)
 
 add_folders(qpe_tangelo_project)
