Fix density matrix code, add unit test for basic density matrix

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,7 +33,7 @@ cmake_path(GET PROJECT_SOURCE_DIR PARENT_PATH KETTLE_SOURCE_DIR)
 set(SOURCE_FILES_DIR "${KETTLE_SOURCE_DIR}/source")
 
 function(add_test_target)
-    set(OPTIONS USE_NLOPT)
+    set(OPTIONS USE_NLOPT USE_EIGEN)
     set(ONE_VALUE_ARGS TARGET)
     set(MULTI_VALUE_ARGS SOURCES)
     cmake_parse_arguments(add_test_target "${OPTIONS}" "${ONE_VALUE_ARGS}" "${MULTI_VALUE_ARGS}" "${ARGN}")
@@ -56,13 +56,14 @@ function(add_test_target)
 
     if(add_test_target_USE_NLOPT)
         get_target_property(NLOPT_INCLUDES nlopt::nlopt INTERFACE_INCLUDE_DIRECTORIES)
-        target_link_libraries(
-            ${add_test_target_TARGET}
-            PRIVATE nlopt::nlopt
-        )
-        target_include_directories(${add_test_target_TARGET}
-            SYSTEM PUBLIC ${NLOPT_INCLUDES}
-        )
+        target_link_libraries(${add_test_target_TARGET} PRIVATE nlopt::nlopt)
+        target_include_directories(${add_test_target_TARGET} SYSTEM PUBLIC ${NLOPT_INCLUDES})
+    endif()
+
+    if(add_test_target_USE_EIGEN)
+        get_target_property(EIGEN_INCLUDES Eigen3::Eigen INTERFACE_INCLUDE_DIRECTORIES)
+        target_link_libraries(${add_test_target_TARGET} PRIVATE Eigen3::Eigen)
+        target_include_directories(${add_test_target_TARGET} SYSTEM PUBLIC ${EIGEN_INCLUDES})
     endif()
 
     catch_discover_tests(${add_test_target_TARGET})
@@ -116,6 +117,7 @@ add_test_target(TARGET operations_test SOURCES "source/simulation/operations_tes
 add_test_target(TARGET simulate_test SOURCES "source/simulation/simulate_test.cpp")
 add_test_target(TARGET simulate_pauli_test SOURCES "source/simulation/simulate_pauli_test.cpp")
 
+add_test_target(OPTIONS USE_EIGEN TARGET density_matrix_test SOURCES "source/state/density_matrix_test.cpp")
 add_test_target(TARGET project_state_test SOURCES "source/state/project_state_test.cpp")
 add_test_target(TARGET state_test SOURCES "source/state/state_test.cpp")
 
